--- a/app/app.css
+++ b/app/app.css
@@ -1,4 +1,3 @@
-@import "tailwindcss";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -10,7 +9,7 @@
 
 html,
 body {
-  @apply bg-white dark:bg-gray-950;
+  @apply bg-[white] dark:bg-[black];
 
   @media (prefers-color-scheme: dark) {
     color-scheme: dark;
